[package]
name = "meow-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Reusable composable stream-transport layers (TLS, WS, gRPC, H2, HTTPUpgrade) for meow-rs"

# ADR-0001 + ADR-0009: this crate is a leaf — no dep on any other workspace crate
# (meow-common, meow-proxy, meow-dns, meow-config).
# `cargo tree -p meow-transport` must show no meow-* crates.

[features]
default = ["tls", "ws"]
tls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:webpki-roots",
]
# boring-tls: enables BoringSSL-backed TLS for ECH and uTLS fingerprinting.
# Requires cmake 3.14+ and a C++ compiler at build time (boring-sys vendors BoringSSL).
# When absent, TlsConfig.fingerprint keeps the existing stub-warn behaviour and
# TlsConfig.ech returns TransportError::Config at construction time.
boring-tls = [
    "tls",
    "dep:boring",
    "dep:tokio-boring",
    "dep:boring-sys",
    "dep:rand",
    "dep:webpki-root-certs",
]
ws = [
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:base64",
]
# ech: enable rustls-side Encrypted Client Hello using aws-lc-rs HPKE primitives.
# Adds ~1 MB to the binary (aws-lc-rs static crypto blob) — off by default.
# Strictly additive: the rest of the TLS path keeps using ring.
ech = [
    "tls",
    "rustls/aws_lc_rs",
    "tokio-rustls/aws_lc_rs",
]
grpc = [
    "dep:h2",
    "dep:http",
    "dep:rand",
]
h2 = [
    "dep:h2",
    "dep:http",
    "dep:rand",
]
httpupgrade = [
    "dep:httparse",
]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

# tls feature
tokio-rustls    = { workspace = true, optional = true }
rustls          = { workspace = true, optional = true }
webpki-roots    = { workspace = true, optional = true }

# ws feature
tokio-tungstenite = { workspace = true, optional = true }
futures-util      = { workspace = true, optional = true }
base64            = { workspace = true, optional = true }

# grpc + h2 features (share the h2 crate; see ADR-0001 §5 note on intentional dep sharing)
h2   = { version = "0.4", optional = true }
http = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

# httpupgrade feature
httparse = { version = "1", optional = true }

# boring-tls feature
boring             = { workspace = true, optional = true }
tokio-boring       = { workspace = true, optional = true }
boring-sys         = { version = "5.0.2", optional = true }
# Mozilla CA bundle for boring's X509Store. The BoringSSL connector
# starts with an *empty* trust store; sandboxed runtimes (iOS
# NetworkExtension, sealed app extensions) don't pick up system roots
# the way `boring-sys`'s vendored BoringSSL falls back to on a plain
# macOS process, so peer-cert verification fails with
# `unable to get local issuer certificate` for every proxy that uses
# TLS (ech-tls-tunnel, trojan, vless+tls, ss-plugin v2ray, …).
# Seeding the same Mozilla root list rustls uses gives the boring path
# parity with rustls and makes verification work uniformly across
# platforms. Adds ~150 KB of DER blobs to the .rlib.
webpki-root-certs  = { version = "1", optional = true }

[dev-dependencies]
tokio        = { workspace = true }
tokio-rustls = { workspace = true }
rustls       = { workspace = true }
rcgen        = "0.13"
md5          = "0.8"
# Log-capture strategy: home-rolled MakeWriter in tests/support/log_capture.rs using
# tracing_subscriber scoped subscribers, documented there.  tracing-test is NOT used
# because it installs a process-global subscriber that cross-contaminates parallel test
# binaries (each test file in tests/ is a separate binary).
tracing-subscriber = { workspace = true, features = ["env-filter"] }
regex = { workspace = true }
base64 = { workspace = true }

[[test]]
name = "boring_tls_test"
required-features = ["boring-tls"]

[[test]]
name = "grpc_test"
required-features = ["grpc"]

[[test]]
name = "grpc_unbounded_test"
required-features = ["grpc"]

[[test]]
name = "h2_test"
required-features = ["h2"]

[[test]]
name = "httpupgrade_test"
required-features = ["httpupgrade"]

[lints]
workspace = true
