[package]
name = "meow-trie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
regex = { workspace = true }
smallvec = { workspace = true }

[[bench]]
name = "trie_bench"
harness = false

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
