[package]
name = "mihomo-tunnel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mihomo-common = { workspace = true }
mihomo-dns = { workspace = true, default-features = false }
mihomo-rules = { workspace = true }
mihomo-proxy = { workspace = true, default-features = false }
mihomo-trie = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "udp_bench"
harness = false

[[bench]]
name = "rules_bench"
harness = false

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
mihomo-trie = { workspace = true }
criterion = { workspace = true }
dashmap = { workspace = true }
ipnet = { workspace = true }
mihomo-rules = { workspace = true }

[lints]
workspace = true
